guarantee seal fix on narrow screens

--- a/source/styles/elements/_scaffolding.scss
+++ b/source/styles/elements/_scaffolding.scss
@@ -10,6 +10,10 @@ body {
   background-repeat: repeat-x;
 }
 
+img {
+  max-width: 100%;
+}
+
 /**
  * TODO: Determine if this is viable or not. Temporarily (?) commented out to
  * avoid repetitive overrides.
